--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,5 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
@@ -25,7 +25,7 @@
         <div class="navbar">
             <ul>
                 <li><a href=""><img src="{% static 'img/tumbler.png' %}">오늘의 분리수거</a></li>
-                <li><a href=""><img src="{% static 'img/lunch_box.png' %}">분리수거 계산기</a></li>
+                <li><a href="{% url 'calculator:home' %}"><img src="{% static 'img/lunch_box.png' %}">분리수거 계산기</a></li>
                 <li><a href=""><img src="{% static 'img/cycle_box.png' %}">챌린지</a></li>
                 <li><a href=""><img src="{% static 'img/recycle.png' %}">환경을 생각하는 기업</a></li>
             </ul>
@@ -35,7 +35,8 @@
         </div>
     </header>
     <section id="container">
-        {% block content %}{% endblock  %}
+        {% block content %}
+        {% endblock %}
     </section>
 </body>
 
