--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -1,6 +1,10 @@
+{% extends 'base.html' %}
+
+{% block content %}
 <h1>Login</h1>
 <form action="{% url 'common:login' %}" method="POST">
     {% csrf_token %}
     {{form.as_p}}
     <input type="submit" value="로그인">
 </form>
+{% endblock content %}
