Convert User primary key from Integer to UUID

--- a/templates/calculator/peek.html
+++ b/templates/calculator/peek.html
@@ -1,6 +1,10 @@
 {% extends 'base.html' %}
 {% load static %}
 
+{% block title %}
+분리수거 계산기
+{% endblock title %}
+
 {% block content %}
 <div class="cal__title">
     <h3>분리수거 계산기</h3>
