--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Calculator</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
@@ -14,13 +13,23 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+    <link rel="shortcut icon" href="{% static 'favicon/favicon.ico'%}" />
+    <title>
+        {% block title %}
+
+        {% endblock title %}
+    </title>
+
 </head>
 
 <body>
     <header>
         <div class="main__icon">
-            <img src="{% static 'img/sprout.png' %}">
-            <h1>Better than Nothing</h1>
+            <a href="{% url 'test'%}">
+                <img src="{% static 'img/sprout.png' %}">
+                <h1>Better than Nothing</h1>
+
+            </a>
         </div>
         <div class="navbar">
             <ul>
