--- a/templates/common/login.html
+++ b/templates/common/login.html
@@ -1,5 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}
+로그인
+{% endblock title %}
+
 {% block content %}
 <h1>Login</h1>
 <form action="{% url 'common:login' %}" method="POST">
