--- a/templates/common/test.html
+++ b/templates/common/test.html
@@ -1,4 +1,9 @@
 {% extends 'base.html' %}
+
+{% block title %}
+Better Than Nothing
+{% endblock title %}
+
 {% block content %}
 {% if user.is_authenticated %}
 {{user.username}} 님 반갑습니다!
