--- a/templates/base.html
+++ b/templates/base.html
@@ -25,7 +25,7 @@
 <body>
     <header>
         <div class="main__icon">
-            <a href="{% url 'test'%}">
+            <a href="{% url 'home'%}">
                 <img src="{% static 'img/sprout.png' %}">
                 <h1>Better than Nothing</h1>
 
