Refactor instruction app

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,25 +25,25 @@
 
 <body>
     <header>
-        
+
         <div class="navbar">
             <div class="main__icon">
                 <a href="{% url 'home'%}">
                     <img src="{% static 'img/sprout.png' %}">
                 </a>
-                    <h1>Better than Nothing</h1>
+                <h1>Better than Nothing</h1>
             </div>
             <ul>
-                <li><a href=""><img src="{% static 'img/tumbler.png' %}">오늘의 분리수거</a></li>
+                <li><a href="{% url 'instruction:way' %}"><img src="{% static 'img/tumbler.png' %}">오늘의 분리수거</a></li>
                 <li><a href="{% url 'calculator:home' %}"><img src="{% static 'img/lunch_box.png' %}">분리수거 계산기</a></li>
                 <li><a href=""><img src="{% static 'img/cycle_box.png' %}">챌린지</a></li>
                 <li><a href=""><img src="{% static 'img/recycle.png' %}">환경을 생각하는 기업</a></li>
             </ul>
             {% if user.is_authenticated %}
             <div class="user__profile">
-            <a href="{% url 'common:profile' user.id %}">
-                <img src="{% static 'img/circle.png' %}">
-            </a>
+                <a href="{% url 'common:profile' user.id %}">
+                    <img src="{% static 'img/circle.png' %}">
+                </a>
                 {{user.name}}
                 <a href="{% url 'common:logout' %}">로그아웃</a>
             </div>
@@ -55,7 +55,7 @@
                 <a href="{% url 'common:register' %}">회원가입</a>
             </div>
             {% endif %}
-        </div>    
+        </div>
     </header>
     <section id="container">
         {% block content %}
