--- a/static/way.css
+++ b/static/way.css
@@ -14,7 +14,7 @@ body {
     margin: 0 0 20px;
     line-height: 1.5;}
     
-  .main {
+  .tabmain {
     min-width: 320px;
     max-width: 800px;
     padding: 50px;
