--- a/instruction/static/way.css
+++ b/instruction/static/way.css
@@ -56,5 +56,7 @@ body {
   #tab3:checked~#content3,
   #tab4:checked~#content4,
   #tab5:checked~#content5,
-  #tab6:checked~#content6 {
+  #tab6:checked~#content6,
+  #tab7:checked~#content7,
+  #tab8:checked~#content8 {
     display: block;}
