--- a/templates/instruction/way.html
+++ b/templates/instruction/way.html
@@ -12,35 +12,46 @@
 <h1> 분리수거 요령 </h1>
 <div class="tabmain">
     <input id="tab1" type="radio" name="tabs" checked>
-    <label for="tab1">종이류, 종이팩</label>
+    <label for="tab1">종이류</label>
     <input id="tab2" type="radio" name="tabs">
-    <label for="tab2">금속캔, 고철</label>
+    <label for="tab2">종이팩</label>
     <input id="tab3" type="radio" name="tabs">
-    <label for="tab3">유리병류</label>
+    <label for="tab3">금속캔, 고철</label>
     <input id="tab4" type="radio" name="tabs">
     <label for="tab4">플라스틱류</label>
+    <br>
     <input id="tab5" type="radio" name="tabs">
-    <label for="tab5">비닐류</label>
+    <label for="tab5">유리병류</label>
     <input id="tab6" type="radio" name="tabs">
-    <label for="tab6">스티로폼</label>
+    <label for="tab6">비닐류</label>
+    <input id="tab7" type="radio" name="tabs">
+    <label for="tab7">스티로폼</label>
+    <input id="tab8" type="radio" name="tabs">
+    <label for="tab8">음식물 쓰레기</label>
 
     <section id="content1">
         <p> <img src="{% static 'img/paper.jpg' %}" width="100%" height="100%"> </p>
     </section>
     <section id="content2">
-        <p> <img src="{% static 'img\paper_pack.jpg' %}" alt=""> </p>
+        <p> <img src="{% static 'img/carton.jpg' %}" width="100%" height="100%"> </p>
     </section>
     <section id="content3">
-        <p>tab menu3의 내용</p>
+        <p> <img src="{% static 'img/metal.jpg' %}" width="100%" height="100%"> </p>
     </section>
     <section id="content4">
-        <p>tab menu4의 내용</p>
+        <p> <img src="{% static 'img/plastic.jpg' %}" width="100%" height="100%"> </p>
     </section>
     <section id="content5">
-        <p>tab menu3의 내용</p>
+        <p> <img src="{% static 'img/glass.jpg' %}" width="100%" height="100%"> </p>
     </section>
     <section id="content6">
-        <p>tab menu4의 내용</p>
+        <p> <img src="{% static 'img/vinyl.jpg' %}" width="100%" height="100%"> </p>
+    </section>
+    <section id="content7">
+        <p> <img src="{% static 'img/styrofoam.jpg' %}" width="100%" height="100%"> </p>
+    </section>
+    <section id="content8">
+        <p> <img src="{% static 'img/foodwaste.jpg' %}" width="100%" height="100%"> </p>
     </section>
 </div>
 {% endblock content %}
