--- a/templates/base.html
+++ b/templates/base.html
@@ -61,6 +61,11 @@
         {% block content %}
         {% endblock %}
     </section>
+    <section id="container2">
+        {% block content2 %}
+        
+        {% endblock %}
+    </section>
 </body>
 
 </html>
