계산기 아이템 추가와 삭제, 계산 구현

--- a/templates/calculator/peek.html
+++ b/templates/calculator/peek.html
@@ -120,7 +120,7 @@
 </div>
 <div class="peek__items">
     <div class="bucket">
-        <form action="{% url 'calculator:home' %}" method="POST">
+        <form action="{% url 'calculator:result' %}" method="POST">
             {% csrf_token %}
             <table class="item__table" border="0" cellspacing="0" cellpadding="0" id="items_table">
                 <thead bgcolor="#C8E3FF">
