Add profile img

--- a/templates/calculator/result.html
+++ b/templates/calculator/result.html
@@ -6,7 +6,15 @@
 {% endblock title %}
 
 {% block content %}
-<input type="hidden" value="{{kwh}}">
 {{kwh}}kWh를 아끼셨습니다!
-<button></button>
+<canvas id="canvas">
+
+</canvas>
+<form action="" method="POST">
+    {% csrf_token %}
+    <input type="hidden" name="kwh" value="{{kwh}}">
+    <input type="submit" class="btn btn-success" value="결과 저장하기">
+</form>
+<br>
+<a class="btn btn-secondary" href="{% url 'calculator:home' %}">첫 화면으로</a>
 {% endblock content %}
