계산식 확인

--- a/templates/calculator/result.html
+++ b/templates/calculator/result.html
@@ -6,9 +6,9 @@
 {% endblock title %}
 
 {% block content %}
-{{kwh}}kWh를 아끼셨습니다!
-{{co2}}kg의 CO2 배출량을 줄이셨습니다!
-{{tree}}그루의 나무를 심은것과 같은 효과입니다.
+{{kwh}}kWh를 아끼셨습니다!<br>
+{{co2}}kg의 CO2 배출량을 줄이셨습니다!<br>
+연간 {{tree}}그루의 나무를 심은것과 같은 효과입니다.<br>
 <canvas id="canvas">
 
 </canvas>
